Fixed: wflow-consoleweb - Property Editor - Hash Variable Assistant icon overlap with file picker button. @8.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/jquery.propertyeditor.css
+++ b/wflow-consoleweb/src/main/webapp/css/jquery.propertyeditor.css
@@ -1898,6 +1898,9 @@ body .ui-dialog .button_form.ui-dialog-content{
     border: 1px solid #ced4da;
     border-radius: 0.25rem;
 }
+.editor-panel-mode .property-type-image i.assist_icon {
+    right: 45px;
+}
 
 /* property assistant */
 #propertyAssistantDialog .title-bar{
